--- a/kpiachievement.html
+++ b/kpiachievement.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <ul class="main-nav">
-            <li ><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
+            <li><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Corporate Performance<span class="fa fa-angle-down"></span></a><br/>
@@ -80,7 +80,7 @@
 
                 </ul>
             </li>
-            <li><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
+            <li class="active"><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Business Indicator<span class="fa fa-angle-down"></span></a><br/>
@@ -101,7 +101,7 @@
                         <a href="#">Performance Setting<span class="fa fa-angle-down"></span></a><br/>
                         <ul class="sublevel">
                             <li><a href="corporateportfolio.html"> Corporate Portfolio</a></li>
-                            <li> <a href="#"> Setting Target</a></li>
+                            <li> <a href="kpiachievement.html"> Setting Target</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Plan Resource</a></li>
@@ -149,7 +149,7 @@
                     <li><a href="#">KPI Test</a></li>
                 </ul>
             </li>
-            <li class="active"><a href="#" class="menu_setting"><i class="fa fa-cog"></i><span>SETTING</span></a>
+            <li><a href="#" class="menu_setting"><i class="fa fa-cog"></i><span>SETTING</span></a>
                 <ul class="sub-nav">
 
                     <li><a href="production.html">Group Management</a></li>
@@ -178,149 +178,209 @@
             <div class="title_page" style="border:none!important;">
                 <div class="row">
 
-                    <div class="title">Artifact Designer</div>
+                    <div class="title">KPI Achievement</div>
 
                 </div>
-                <div class="row">
 
-                    <a href="artifactdesigner-new.html" class="text-button">
-                        <span class="fa fa-plus-circle"></span>
-                        New
-                    </a>
-                </div>
             </div>
 
+            <div class="col-md-12">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>KPI Name</th>
+                        <th>Measurement</th>
+                        <th>Accountability</th>
+                        <th>Type</a></th>
+                        <th style="width: 13%;">Action</th>
+                    </tr>
 
-                <div class="col-md-12">
-                    <table class="table table-hover table-striped table-bordered">
-                        <thead>
-                        <tr>
-                            <th>No</th>
-                            <th style="width:39%;">Artifact Name</th>
-                            <th style="width:12%;">Graphic Type</th>
-                            <th style="width:30%;">Header Title</th>
-                            <th>Period Aggregation</th>
-                            <th style="width:20%;">Action</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                    <td colspan="6" style="text-align: left;"class="grey_text">
+                        Stakeholder Responsibilities
+                    </td>
+                    </tr>
+                    <tr>
 
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
+                        <td>1</td>
+                        <td>Employee Turnover</td>
+                        <td>%</td>
+                        <td>Human Capital Management</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            <td>1</td>
-                            <td>Plant Availabilty Graphic</td>
-                            <td>Coloumn</td>
-                            <td>2014 - 2007</td>
-                            <td>Yearly</td>
-                             <td class="text-button" style="margin:auto;">
-                                 <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                 <a href="artifactdesigner-edit.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                 <a href="#"><span class="fa fa-times"></span>Delete</a>
+                    </tr>
+                    <tr>
 
+                        <td>2</td>
+                        <td>Community acceptance through CSR program &amp; CR</td>
+                        <td>%</td>
+                        <td>Community Support & Relation</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                             </td>
+                    </tr>
+                    <tr>
+                        <td colspan="6" style="text-align: left;" class="grey_text">
+                           Financial Strength
+                        </td>
+                    </tr>
+                    <tr>
 
+                        <td>3</td>
+                        <td>Production Cost</td>
+                        <td>USD/mmbtu</td>
+                        <td>Finance Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                        </tr>
-                        <tr>
+                    </tr>
+                    <tr>
 
-                            <td>2</td>
-                            <td>QHSE Tabular 2</td>
-                            <td>Tabular</td>
-                            <td>QHSE Performance</td>
-                            <td>Undefined</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
+                        <td>4</td>
+                        <td>Budget Utilization(%)</td>
+                        <td>%</td>
+                        <td>Finance Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            </td>
+                    </tr>
+                    <tr>
+                        <td colspan="6" style="text-align: left;" class="grey_text">
+                            Productivity & Efficiency
+                        </td>
+                    </tr>
+                    <tr>
 
+                        <td>5</td>
+                        <td>Plant Availability</td>
+                        <td>%</td>
+                        <td>Technical Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                        </tr>
+                    </tr>
+                    <tr>
 
-                        <tr>
+                        <td>6</td>
+                        <td>Thermal Efficiency</td>
+                        <td>%</td>
+                        <td>Operation Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            <td>3</td>
-                            <td>QHSE Closure Action VS Near Miss</td>
-                            <td>Double Axis</td>
-                            <td>Closure Action VS Near Miss</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
+                    </tr>
+                    <tr>
 
+                        <td>7</td>
+                        <td>Flared Gas</td>
+                        <td>%</td>
+                        <td>Operation Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            </td>
+                    </tr>
 
+                    <tr>
 
-                        </tr>
+                        <td>8</td>
+                        <td>Cargo Commitment</td>
+                        <td>Cargo</td>
+                        <td>Commercial Directorate</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                        <tr>
+                    </tr>
+                    <td colspan="6" style="text-align: left;"class="grey_text">
+                        Safety
+                    </td>
 
-                            <td>4</td>
-                            <td>QHSE Training Attend</td>
-                            <td>Double Axis</td>
-                            <td>QHSE Training Attend</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
+                    <tr>
 
+                        <td>9</td>
+                        <td>Fatality/Strap disability</td>
+                        <td>Case</td>
+                        <td>QHSE</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            </td>
+                    </tr>
+                    <tr>
 
+                        <td>10</td>
+                        <td>QHSE training attend(%)</td>
+                        <td>%</td>
+                        <td>QHSE</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                        </tr>
+                    </tr>
+                    <tr>
 
-                        <tr>
+                        <td>11</td>
+                        <td>RIF</td>
+                        <td>Number</td>
+                        <td>QHSE</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-                            <td>5</td>
-                            <td>QHSE Security Incident</td>
-                            <td>Speedometer</td>
-                            <td>QHSE Security Incident</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
+                    </tr>
 
+                    <tr>
 
-                            </td>
+                        <td>12</td>
+                        <td>Security Incident</td>
+                        <td>Case</td>
+                        <td>QHSE</td>
+                        <td>Coorporate</td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
+                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+                        </td>
 
-
-                        </tr>
-
-                        <tr>
-
-                            <td>6</td>
-                            <td>QHSE Spider 1</td>
-                            <td>Spider Web 2</td>
-                            <td>QHSE Lagging Indicator</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"  data-toggle="modal" data-target="#ModalViewTemplate"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr class="greyrow">
-                            <td colspan="5"
-                                style="text-align: left;color:white;background-color:#3f454f!important;"></td>
-                            <td style="background-color:#3f454f;color:white;">Total Data 6 Data</td>
-                        </tr>
-
-                        </tbody>
-                    </table>
-                </div>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
+
+            </div>
+
         </section>
 
 
@@ -328,45 +388,9 @@
 </div>
 <!-- ./wrapper -->
 
-<!-- Modal -->
-<div class="modal fade bs-example-modal-lg" id="ModalViewArtifact" tabindex="-1" role="dialog"
-     aria-labelledby="ModalViewArtifact" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <div class="row centering">
-                    <div class="title">2014 - 2007</div>
-                    <div class="description_year">Yearly Range 2014 - 2007</div>
-                </div>
 
-            </div>
-            <div class="modal-body">
-                <div class="btn-group btn-more">
-                    <button type="button" class="dropdown-toggle icon_more" data-toggle="dropdown"
-                            aria-expanded="false">
-                        <span class="fa fa-bars"></span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><span class="fa fa-print"></span>Print Chart</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><span class="fa fa-bar-chart-o"></span>View Tabular</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><span class="fa fa-file-image-o"></span>Download PNG Image</a></li>
-                        <li><a href="#"><span class="fa fa-file-image-o"></span>Download JPEG Image</a></li>
-                        <li><a href="#"><span class="fa fa-file-pdf-o"></span>Download PDF Document</a></li>
-                        <li><a href="#"><span class="fa fa-file-text-o"></span>Download SVG Vector Image</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="content_tab centering"><img src="css/img/graphic10.PNG"/></div>
 
-            </div>
 
-        </div>
-    </div>
-</div>
 
 <!-- jQuery 2.0.2 -->
 
