--- a/kpiachievement.html
+++ b/kpiachievement.html
@@ -191,7 +191,7 @@
                         <th>No</th>
                         <th>KPI Name</th>
                         <th>Measurement</th>
-                        <th>Accountability</th>
+
                         <th>Type</a></th>
                         <th style="width: 13%;">Action</th>
                     </tr>
@@ -200,7 +200,7 @@
                     <tbody>
                     <tr>
                     <td colspan="6" style="text-align: left;"class="grey_text">
-                        Stakeholder Responsibilities
+                        Human Capital Management
                     </td>
                     </tr>
                     <tr>
@@ -208,7 +208,7 @@
                         <td>1</td>
                         <td>Employee Turnover</td>
                         <td>%</td>
-                        <td>Human Capital Management</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -216,12 +216,17 @@
                         </td>
 
                     </tr>
+
+                    <td colspan="6" style="text-align: left;"class="grey_text">
+                        Community Support & Relation
+                    </td>
+
                     <tr>
 
                         <td>2</td>
                         <td>Community acceptance through CSR program &amp; CR</td>
                         <td>%</td>
-                        <td>Community Support & Relation</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -231,7 +236,7 @@
                     </tr>
                     <tr>
                         <td colspan="6" style="text-align: left;" class="grey_text">
-                           Financial Strength
+                            Finance Directorate
                         </td>
                     </tr>
                     <tr>
@@ -239,7 +244,7 @@
                         <td>3</td>
                         <td>Production Cost</td>
                         <td>USD/mmbtu</td>
-                        <td>Finance Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -252,7 +257,7 @@
                         <td>4</td>
                         <td>Budget Utilization(%)</td>
                         <td>%</td>
-                        <td>Finance Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -260,9 +265,10 @@
                         </td>
 
                     </tr>
+
                     <tr>
                         <td colspan="6" style="text-align: left;" class="grey_text">
-                            Productivity & Efficiency
+                            Technical Directorate
                         </td>
                     </tr>
                     <tr>
@@ -270,7 +276,7 @@
                         <td>5</td>
                         <td>Plant Availability</td>
                         <td>%</td>
-                        <td>Technical Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -278,12 +284,18 @@
                         </td>
 
                     </tr>
+
+                    <tr>
+                        <td colspan="6" style="text-align: left;" class="grey_text">
+                            Operation Directorate
+                        </td>
+                    </tr>
                     <tr>
 
                         <td>6</td>
                         <td>Thermal Efficiency</td>
                         <td>%</td>
-                        <td>Operation Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -296,7 +308,7 @@
                         <td>7</td>
                         <td>Flared Gas</td>
                         <td>%</td>
-                        <td>Operation Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -304,13 +316,17 @@
                         </td>
 
                     </tr>
-
+                    <tr>
+                        <td colspan="6" style="text-align: left;" class="grey_text">
+                            Commercial Directorate
+                        </td>
+                    </tr>
                     <tr>
 
                         <td>8</td>
                         <td>Cargo Commitment</td>
                         <td>Cargo</td>
-                        <td>Commercial Directorate</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -319,7 +335,7 @@
 
                     </tr>
                     <td colspan="6" style="text-align: left;"class="grey_text">
-                        Safety
+                        QHSE
                     </td>
 
                     <tr>
@@ -327,7 +343,7 @@
                         <td>9</td>
                         <td>Fatality/Strap disability</td>
                         <td>Case</td>
-                        <td>QHSE</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -340,7 +356,7 @@
                         <td>10</td>
                         <td>QHSE training attend(%)</td>
                         <td>%</td>
-                        <td>QHSE</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -353,7 +369,7 @@
                         <td>11</td>
                         <td>RIF</td>
                         <td>Number</td>
-                        <td>QHSE</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
@@ -367,7 +383,7 @@
                         <td>12</td>
                         <td>Security Incident</td>
                         <td>Case</td>
-                        <td>QHSE</td>
+
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
                             <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
