kpi achievement & kpi target

--- a/kpiachievement.html
+++ b/kpiachievement.html
@@ -199,8 +199,11 @@
                     </thead>
                     <tbody>
                     <tr>
-                    <td colspan="6" style="text-align: left;"class="grey_text">
+                    <td colspan="4" style="text-align: left;"class="grey_text">
                         Human Capital Management
+                    </td>
+                    <td class="text-button" style="margin:auto;">
+                        <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                     </td>
                     </tr>
                     <tr>
@@ -211,14 +214,17 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
 
-                    <td colspan="6" style="text-align: left;"class="grey_text">
+                    <td colspan="4" style="text-align: left;"class="grey_text">
                         Community Support & Relation
+                    </td>
+                    <td class="text-button" style="margin:auto;">
+                        <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                     </td>
 
                     <tr>
@@ -229,14 +235,17 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
                     <tr>
-                        <td colspan="6" style="text-align: left;" class="grey_text">
+                        <td colspan="4" style="text-align: left;" class="grey_text">
                             Finance Directorate
+                        </td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                         </td>
                     </tr>
                     <tr>
@@ -247,28 +256,31 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
                     <tr>
 
                         <td>4</td>
-                        <td>Budget Utilization(%)</td>
+                        <td>Budget Utilization</td>
                         <td>%</td>
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
 
                     <tr>
-                        <td colspan="6" style="text-align: left;" class="grey_text">
+                        <td colspan="4" style="text-align: left;" class="grey_text">
                             Technical Directorate
+                        </td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                         </td>
                     </tr>
                     <tr>
@@ -279,15 +291,18 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
 
                     <tr>
-                        <td colspan="6" style="text-align: left;" class="grey_text">
+                        <td colspan="4" style="text-align: left;" class="grey_text">
                             Operation Directorate
+                        </td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                         </td>
                     </tr>
                     <tr>
@@ -298,8 +313,8 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
@@ -311,14 +326,17 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
                     <tr>
-                        <td colspan="6" style="text-align: left;" class="grey_text">
+                        <td colspan="4" style="text-align: left;" class="grey_text">
                             Commercial Directorate
+                        </td>
+                        <td class="text-button" style="margin:auto;">
+                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                         </td>
                     </tr>
                     <tr>
@@ -329,13 +347,16 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
-                    <td colspan="6" style="text-align: left;"class="grey_text">
+                    <td colspan="4" style="text-align: left;"class="grey_text">
                         QHSE
+                    </td>
+                    <td class="text-button" style="margin:auto;">
+                        <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
                     </td>
 
                     <tr>
@@ -346,21 +367,21 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
                     <tr>
 
                         <td>10</td>
-                        <td>QHSE training attend(%)</td>
+                        <td>QHSE training attend</td>
                         <td>%</td>
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
@@ -372,8 +393,8 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
@@ -386,8 +407,8 @@
 
                         <td>Coorporate</td>
                         <td class="text-button" style="margin:auto;">
-                            <a href="kpitarget.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                            <a href="kpitarget.html"><span class="fa fa-trash-o"></span>Delete</a>
+
+
                         </td>
 
                     </tr>
