--- a/index2.html
+++ b/index2.html
@@ -185,7 +185,7 @@
                     <div class="row">
                         <form class="form-inline">
                             <div class="form-group"
-                                 style="margin:5px 40px 0px 25px;padding-right:30px; border-right:solid 1px #3f454f;">
+                                 style="margin-top:5px;margin-left:25px;padding-right:30px; border-right:solid 1px #3f454f;">
                                 <label class="labletop">Year :</label>
                                 <select class="form-control">
                                     <option>2015</option>
